Fix card width on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,14 +47,18 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+header {
+  background-color: #fff;
+}
+
 /* reusable style */
 .custom__btn {
   background-color: var(--color-1);
   color: #fff;
 }
 
-.main {
-  margin-top: 4em;
+.hero {
+  margin-top: 4.2em;
 }
 
 /* Header style */
@@ -81,10 +85,6 @@ body {
 .active,
 .nav-link:hover {
   color: var(--color-1) !important;
-}
-
-header {
-  background-color: #fff;
 }
 
 /* .nav-link, .active {
@@ -270,6 +270,7 @@ header {
 }
 
 .feature__card {
+  width: 10rem;
   padding: 15px 4px;
 }
 
@@ -464,8 +465,14 @@ header {
     margin-top: 0.9em;
   }
 
-  .feature {
-    margin: 6em 0;
+  .feature__card {
+    width: 15rem;
+  }
+
+  .feature,
+  .products,
+  .blogs {
+    margin-top: 8em;
   }
 
   .fa-shield,
